<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_service"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/lato_medium">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/service_name_et"
        android:hint="@string/service_name"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/cursor_et"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textCapWords"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/total_price_et"
        android:hint="@string/total_price"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/cursor_et"
        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="number"
        android:digits="0123456789"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/worker_cost_et"
        android:hint="@string/worker_amo"
        android:background="@color/white"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@drawable/cursor_et"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="number"
        android:digits="0123456789"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/done_btn"
        android:theme="@style/green_btn"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/lato_medium"
        android:textSize="15sp"
        android:background="@drawable/green_btn">

    </Button>




</LinearLayout>