<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker_name"
            android:id="@+id/worker_name_text"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/dark_grey"
            android:textSize="23sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker_phone"
            android:layout_below="@id/worker_name_text"
            android:id="@+id/worker_phone_text"
            android:textIsSelectable="true"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/dark_grey"
            android:textSize="17sp">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec"
            android:id="@+id/security_amount_head"
            android:fontFamily="@font/lato_medium"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:layout_below="@id/worker_phone_text">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/security_amount_text"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/dark_grey"
            android:textSize="17sp"
            android:layout_toEndOf="@id/security_amount_head"
            android:layout_marginStart="5dp"
            android:layout_below="@id/worker_phone_text">

        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/security_amount_head"
            android:id="@+id/more_security_et"
            android:background="@color/white"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_et"
            android:paddingTop="10dp"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/add_more"
            android:fontFamily="@font/lato_regular"
            android:inputType="number"
            android:digits="0123456789">

        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/green_btn"
            android:text="@string/done"
            android:id="@+id/done_bttn"
            android:textAllCaps="false"
            android:layout_below="@id/security_amount_head"
            android:layout_toEndOf="@id/more_security_et"
            android:layout_marginStart="10dp">

        </Button>

    </RelativeLayout>

</androidx.cardview.widget.CardView>