<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker_name"
            android:id="@+id/worker_name"
            android:fontFamily="@font/lato_medium"
            android:textColor="@color/dark_grey"
            android:textSize="23sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker_phone"
            android:layout_below="@id/worker_name"
            android:id="@+id/worker_phone"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/dark_grey"
            android:textSize="17sp">

        </TextView>

        <EditText
            android:id="@+id/security_amount_et"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/worker_phone"
            android:layout_marginTop="-2dp"
            android:background="@color/white"
            android:digits="0123456789"
            android:hint="@string/security_amount"
            android:inputType="number"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_et">

        </EditText>

        <EditText
            android:id="@+id/area_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/security_amount_et"
            android:layout_marginTop="-2dp"
            android:background="@color/white"
            android:hint="@string/area"
            android:inputType="text"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_et">

        </EditText>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/approve_btn"
            android:src="@drawable/ic_check"
            android:layout_alignParentEnd="true">

        </ImageView>

    </RelativeLayout>



</androidx.cardview.widget.CardView>