<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Admin.ServicesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:text="@string/services"
        android:fontFamily="@font/lato_medium"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/services_recyclerview">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_service"
            android:textSize="17sp"
            android:id="@+id/no_service_text"
            android:visibility="gone"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/dark_grey"
            android:layout_centerInParent="true">

        </TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:id="@+id/add_service_btn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:contentDescription="@string/app_name">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </RelativeLayout>

</LinearLayout>