<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/parent"
    android:background="@drawable/login_bg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        android:layout_centerInParent="true"
        android:id="@+id/card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round">

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/sign_in"
                android:textColor="@color/dark_grey"
                android:textSize="20sp">

            </TextView>

            <CheckBox
                android:id="@+id/show_pass_check"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/password_et"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/show_pass"
                android:textColor="@color/colorPrimaryDark">

            </CheckBox>

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/a"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_email"
                android:textColor="@color/dark_grey"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/type_email"
                android:textColorHint="@color/gray"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@drawable/cursor_et">

            </EditText>

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/part"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColorHint="@color/gray"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/dark_grey"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:textCursorDrawable="@drawable/cursor_et"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/type_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

            </EditText>



            <View
                android:id="@+id/part"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/email_et"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/gray">

            </View>

            <Button
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:id="@+id/login_btn"
                android:layout_below="@id/show_pass_check"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/lato_regular"
                android:text="@string/sign_in"
                android:textColor="@color/white">

            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_acc"
            android:id="@+id/textView"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/dark_grey"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="15dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/sign_up_text"
            android:layout_toEndOf="@id/textView"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="5dp">

        </TextView>


    </RelativeLayout>

</RelativeLayout>